forgery in minecraft before GTA 6

--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.menagerie.mark_of_dissonance" : "Mark of Dissonance",
   "item.menagerie.mark_of_the_accursed": "Mark of the Accursed",
+  "item.menagerie.simulacrum_vessel": "Simulacrum Vessel",
   "item.menagerie.damnatio_memoriae": "§3Forgotten Disc",
   "item.menagerie.damnatio_memoriae.desc": "Damnatio Memoriae",
   "painting.menagerie.ether.title": "Ether",
