simulacra on my vessel till i duplicate

--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.menagerie.mark_of_the_accursed": "Mark of the Accursed",
   "item.menagerie.simulacrum_vessel": "Simulacrum Vessel",
   "item.menagerie.damnatio_memoriae": "§3Forgotten Disc",
-  "item.menagerie.damnatio_memoriae.desc": "Damnatio Memoriae",
+  "item.menagerie.damnatio_memoriae.desc": "§kThe Architect§r - Damnatio Memoriae",
   "painting.menagerie.ether.title": "Ether",
   "painting.menagerie.ether.author": "§kThe Architect",
   "block.menagerie.capozi_plush": "Capozi Plush",
