--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.menagerie.simulacrum_vessel": "Simulacrum Vessel",
   "item.menagerie.damnatio_memoriae": "§3Forgotten Disc",
   "item.menagerie.damnatio_memoriae.desc": "§kThe Architect§r - Damnatio Memoriae",
+  "item.menagerie.heavyiron_longspoon": "Heavyiron Longspoon",
   "painting.menagerie.ether.title": "Ether",
   "painting.menagerie.ether.author": "§kThe Architect",
   "block.menagerie.capozi_plush": "Capozi Plush",
