fixed arcane spawning in structures

--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -11,7 +11,9 @@
   "block.menagerie.eya_plush": "Eyalego Plush",
   "block.menagerie.cosmo_plush": "Cosmo Plush",
   "enchantment.menagerie.arcane": "Arcane",
+  "enchantment.menagerie.pogo": "Pogo",
   "enchantment.menagerie.arcane.desc": "Coverts all weapon damage into Magic damage",
+  "enchantment.menagerie.pogo.desc": "Replaces the Spoon's smash attack with a pogo ability. Throws you the opposite way of the direction you are looking",
   "death.attack.arcane": "%1$s was obliterated by magic from %2$s",
   "death.attack.arcane.item": "%1$s was obliterated by magic from %2$s wielding %3$s",
   "item.menagerie.camera_of_the_otherside" : "Camera of the Otherside",
