--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -12,10 +12,10 @@
   "block.menagerie.cosmo_plush": "Cosmo Plush",
   "enchantment.menagerie.arcane": "Arcane",
   "enchantment.menagerie.pogo": "Pogo",
+  "enchantment.menagerie.condensed": "Condensed",
+  "enchantment.menagerie.condensed.desc": "Doubles the knockback of the Spoon's charge attack",
   "enchantment.menagerie.arcane.desc": "Coverts all weapon damage into Magic damage",
-  "enchantment.menagerie.pogo.desc": "Replaces the Spoon's smash attack with a pogo ability. Throws you the opposite way of the direction you are looking",
-  "death.attack.arcane": "%1$s was obliterated by magic from %2$s",
-  "death.attack.arcane.item": "%1$s was obliterated by magic from %2$s wielding %3$s",
+  "enchantment.menagerie.pogo.desc": "Replaces the Spoon's charge attack with a pogo ability. Throws you the opposite direction of where you're looking",
   "item.menagerie.camera_of_the_otherside" : "Camera of the Otherside",
   "effect.menagerie.immobilized": "Chained"
 }
