--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.menagerie.damnatio_memoriae": "§3Forgotten Disc",
   "item.menagerie.damnatio_memoriae.desc": "§kThe Architect§r - Damnatio Memoriae",
   "item.menagerie.heavyiron_longspoon": "Heavyiron Longspoon",
+  "item.menagerie.reach_of_the_void": "§aReach of the Void",
+  "item.menagerie.incomplete_construct": "§7Incomplete Construct",
   "painting.menagerie.ether.title": "Ether",
   "painting.menagerie.ether.author": "§kThe Architect",
   "block.menagerie.capozi_plush": "Capozi Plush",
