i have become bone, sawer of flesh

--- a/src/main/resources/assets/menagerie/lang/en_us.json
+++ b/src/main/resources/assets/menagerie/lang/en_us.json
@@ -6,7 +6,8 @@
   "item.menagerie.damnatio_memoriae": "§3Forgotten Disc",
   "item.menagerie.damnatio_memoriae.desc": "§kThe Architect§r - Damnatio Memoriae",
   "item.menagerie.heavyiron_longspoon": "Heavyiron Longspoon",
-  "item.menagerie.trick_room": "Piercer of the Veil",
+  "item.menagerie.trick_room": "Trick Room",
+  "item.menagerie.astral_tear": "Astral Tear",
   "item.menagerie.reach_of_the_void": "§aReach of the Void",
   "item.menagerie.incomplete_construct": "§7Incomplete Construct",
   "painting.menagerie.ether.title": "Ether",
